--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/home/home.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/routes/home/home.component.html
@@ -40,7 +40,7 @@
 				</div>
 			</div>
 
-			<div>
+			<div *ngIf="!nameSelfDeterminationEnabled">
 				<div>
 					<span [translate]="'pacientes.form.GENDER'"></span>
 				</div>
@@ -49,7 +49,7 @@
 										[value]="gender.id">{{gender.description}}</mat-radio-button>
 				</mat-radio-group>
 			</div>
-			<br>
+			<br *ngIf="!nameSelfDeterminationEnabled">
 
 			<div>
 				<div>
