tg-6061. [FE] Ajustar diseño responsive de consulta ambulatoria

--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.html
@@ -474,9 +474,9 @@
 				</div>
 				<app-document-section class="margin-bottom">
 					<ng-container concept-form>
-						<form fxLayout="column" fxLayoutGap="10px"
+						<form fxLayout="column" fxLayoutGap="15px"
 							[formGroup]="signosVitalesNuevaConsultaService.getForm()">
-							<div fxLayout="row wrap" fxFlex="100%" fxLayoutGap="5px" fxLayout.lt-lg="column">
+							<div fxLayout="row wrap" fxFlex="100%" fxLayout.lt-lg="column" fxLayoutGap.lt-lg="15px">
 								<div class="signos-vitales-field" formGroupName="heartRate">
 									<mat-label
 										[translate]="'ambulatoria.paciente.nueva-consulta.signos-vitales.HEART_RATE'">
@@ -521,7 +521,7 @@
 								</div>
 							</div>
 
-							<div fxFlex="100%" fxLayout.lt-lg="column">
+							<div fxLayout="row wrap" fxFlex="100%" fxLayout.lt-lg="column" fxLayoutGap.lt-lg="15px">
 								<div class="signos-vitales-field" formGroupName="temperature">
 									<mat-label
 										[translate]="'ambulatoria.paciente.nueva-consulta.signos-vitales.TEMPERATURE'">
@@ -566,7 +566,7 @@
 								</div>
 							</div>
 
-							<div fxFlex="100%" fxLayout.lt-lg="column">
+							<div fxLayout="row wrap" fxFlex="100%" fxLayout.lt-lg="column" fxLayoutGap.lt-lg="15px">
 								<div class="signos-vitales-field" formGroupName="systolicBloodPressure">
 									<mat-label
 										[translate]="'ambulatoria.paciente.nueva-consulta.signos-vitales.SYSTOLIC_BLOOD_PRESSURE'">
@@ -615,7 +615,7 @@
 								</div>
 							</div>
 
-							<div fxLayout="row wrap" fxFlex="100%" fxLayout.lt-lg="column">
+							<div fxLayout="row wrap" fxFlex="100%" fxLayout.lt-lg="column" fxLayoutGap.lt-lg="15px">
 								<div class="signos-vitales-field" formGroupName="bloodGlucose">
 									<mat-label
 										[translate]="'ambulatoria.paciente.nueva-consulta.signos-vitales.BLOOD_GLUCOSE'">
@@ -660,7 +660,7 @@
 								</div>
 							</div>
 
-							<div fxLayout="row wrap" fxFlex="100%" fxLayout.lt-lg="column">
+							<div fxLayout="row wrap" fxFlex="100%" fxLayout.lt-lg="column" fxLayoutGap.lt-lg="15px">
 								<div class="signos-vitales-field" formGroupName="cardiovascularRisk">
 									<mat-label
 										[translate]="'ambulatoria.paciente.nueva-consulta.signos-vitales.CARDIOVASCULAR_RISK'">
