--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/dialogs/nueva-consulta-dock-popup/nueva-consulta-dock-popup.component.scss
@@ -26,11 +26,6 @@ mat-form-field {
 		}
 		margin-bottom: -5px;
 	}
-	margin-bottom: 10px;
-
-	h5 {
-		margin-block-end: 1em;
-	}
 }
 
 .margin-bottom {
@@ -43,6 +38,7 @@ mat-form-field {
 
 .recomendado-tension {
 	margin-top: 2%;
+	margin-bottom: 0;
 }
 
 .recomendado {
