tg-6000 Agrega insignia del usuario

--- a/front-end/apps/projects/hospital/src/app/modules/home/home.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/home/home.component.html
@@ -1,5 +1,11 @@
 <ng-container *ngIf="(menuItems$ | async) as menuItems; else loading">
-	<app-main-layout [menuItems]="menuItems" [userInfo]="userInfo"></app-main-layout>
+	<app-main-layout [menuItems]="menuItems">
+		<app-user-badge account-info
+			[userInfo]="userInfo"
+			[routerLink]="userProfileLink"
+			routerLinkActive="headers-card-background"
+		></app-user-badge>
+	</app-main-layout>
 </ng-container>
 <ng-template #loading>
 	<mat-progress-bar mode="indeterminate"></mat-progress-bar>
