--- a/front-end/apps/projects/hospital/src/app/modules/institucion/institucion.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/institucion/institucion.component.html
@@ -1,10 +1,19 @@
 <ng-container *ngIf="(menuItems$ | async) as menuItems; else loading">
-	<app-main-layout [menuItems]="menuItems" [userInfo]="menuFooterItems.user">
-			<app-location-badge
-				location-info
-				[location]="menuFooterItems.institution"
-				(click)="institutionHome()"
-			></app-location-badge>
+
+	<app-main-layout [menuItems]="menuItems">
+		<app-location-badge
+			location-info
+			[location]="institution"
+			[routerLink]="institutionHomeLink"
+			routerLinkActive="headers-card-background"
+			[routerLinkActiveOptions]="{exact: true}"
+			[roles]="roles"
+		></app-location-badge>
+		<app-user-badge
+			account-info
+			[userInfo]="userInfo"
+			[routerLink]="userProfileLink"
+		></app-user-badge>
 	</app-main-layout>
 </ng-container>
 <ng-template #loading>
