--- a/front-end/apps/projects/hospital/src/app/modules/presentation/components/location-badge/location-badge.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/components/location-badge/location-badge.component.html
@@ -1,8 +1,11 @@
-<div class="institution-info">
+<div class="location-badge">
 	<span class="name" *ngIf="location?.name">
 		{{location.name}}
 	</span>
 	<span class="address" *ngIf="location?.address">
 		{{location.address}}
+	</span>
+	<span class="role primary" *ngFor="let role of roles">
+		{{role}}
 	</span>
 </div>
