--- a/front-end/apps/projects/hospital/src/app/modules/presentation/components/patient-card/patient-card.component.scss
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/components/patient-card/patient-card.component.scss
@@ -62,3 +62,19 @@ mat-card-subtitle {
 	}
 }
 
+#blood-type {
+	font-weight: bold;
+	font-size: 28px;
+	margin: 0;
+}
+
+#blood-type-container {
+	padding: 0 10px;
+	border-left: 1px solid #BDBDBD;
+	border-right: 1px solid #BDBDBD;
+	height: 100%;
+}
+
+.center-align {
+	text-align: center;
+}
