--- a/front-end/apps/projects/hospital/src/app/modules/presentation/components/patient-card/patient-card.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/presentation/components/patient-card/patient-card.component.html
@@ -1,20 +1,31 @@
 <mat-card id="patient_card" [class]="size">
     <ng-content select="[header]"></ng-content>
-    <div id="layout_header" fxLayout="row" fxLayoutAlign="space-between" fxLayout.lt-sm="column">
-        <mat-card-header>
-            <img mat-card-md-image mat-card-avatar [src]="decodedPhoto$ | async" onerror="this.src='../../../../../assets/images/empty-profile.png'">
-            <mat-card-title class="card-style-1">
-                <span id="title" class="capitalize">
-					{{viewPatientName()}} {{patient?.lastName}} {{patient?.otherLastNames}}
-				</span>
-            </mat-card-title>
-            <mat-card-title class="card-style-2">
-                <span id="patient_id">{{viewIDAndIdentificationTypeAndNumber()}}</span>
-            </mat-card-title>
-            <mat-card-subtitle>
-                <span id="gender_age" [translate]=viewGenderAge()></span>
-            </mat-card-subtitle>
-        </mat-card-header>
+    <div id="layout_header" fxLayout="row" fxLayoutAlign="space-between" fxLayoutGap="5px" fxLayout.lt-md="column">
+        <div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px">
+            <mat-card-header>
+                <img mat-card-md-image mat-card-avatar [src]="decodedPhoto$ | async"
+                    onerror="this.src='../../../../../assets/images/empty-profile.png'">
+                <mat-card-title class="card-style-1">
+                    <span id="title" class="capitalize">
+                        {{viewPatientName()}} {{patient?.lastName}} {{patient?.otherLastNames}}
+                    </span>
+                </mat-card-title>
+                <mat-card-title class="card-style-2">
+                    <span id="patient_id">{{viewIDAndIdentificationTypeAndNumber()}}</span>
+                </mat-card-title>
+                <mat-card-subtitle>
+                    <span id="gender_age" [translate]=viewGenderAge()></span>
+                </mat-card-subtitle>
+            </mat-card-header>
+
+            <div *ngIf="bloodType?.length" fxLayout="column" fxLayoutAlign="center" id="blood-type-container">
+                <div fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="3px">
+                    <span class="center-align">{{ 'ambulatoria.paciente.card.GROUP_AND_FACTOR' | translate }}</span>
+                    <span class="center-align">{{ 'ambulatoria.paciente.card.SANGUINEOUS' | translate }}</span>
+                    <h1 class="color-primary" id="blood-type">{{ bloodType }}</h1>
+                </div>
+            </div>
+        </div>
         <ng-content id="horizontal_content" select="[horizontal-content]"></ng-content>
     </div>
     <mat-card-content>
