--- a/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/resumen/resumen.component.html
+++ b/front-end/apps/projects/hospital/src/app/modules/historia-clinica/modules/ambulatoria/components/resumen/resumen.component.html
@@ -57,7 +57,7 @@
 				<div fxLayout="column" fxFlex="50%" fxLayoutGap="20px">
 					<ng-container
 						*appHasRole="['ESPECIALISTA_MEDICO', 'PROFESIONAL_DE_SALUD', 'ENFERMERO_ADULTO_MAYOR','ENFERMERO','PROFESIONAL_DE_SALUD', 'ESPECIALISTA_EN_ODONTOLOGIA']">
-						<app-antropometricos-summary [anthropometricData$]="anthropometricData$">
+						<app-antropometricos-summary [anthropometricData$]="anthropometricData$" [hideBloodType]="true">
 						</app-antropometricos-summary>
 					</ng-container>
 				</div>
